EPMRPP-38025: Fix defect type counter shift in launches grid

--- a/app/src/pages/inside/common/launchSuiteGrid/defectStatistics/donutChart/donutChart.scss
+++ b/app/src/pages/inside/common/launchSuiteGrid/defectStatistics/donutChart/donutChart.scss
@@ -13,6 +13,7 @@
   font-size: 13px;
   color: $COLOR--windows-blue;
   line-height: 18px;
+  word-break: keep-all;
 }
 .chart-container {
   height: 56px;
